--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -11,7 +11,7 @@ Resources:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupName: !Sub UdaPeople-${ID}
-      GroupDescription: Allow port 22, port 3030, port 9100 and port 9090.
+      GroupDescription: Allow port 22, port 3030 and port 9100.
       SecurityGroupIngress:
         - IpProtocol: tcp
           FromPort: 22
@@ -26,10 +26,7 @@ Resources:
           ToPort: 9100
           CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
-          FromPort: 9090
-          ToPort: 9090
-          CidrIp: 0.0.0.0/0
-          
+        
   EC2Instance:
     Type: AWS::EC2::Instance
     Properties:
