--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -290,14 +290,13 @@ jobs:
             sudo npm install webpack-dev-server -g
             sudo npm install
       - run:
-          name: Get backend url
+          name: Backend url
           command: |
             export BACKEND_IP=$(sed -n 2p .circleci/ansible/inventory.txt)
             export API_URL="http://${BACKEND_IP}:3030"
             echo ENVIRONMENT=production > "frontend/.env"
             echo NODE_ENV=production >> "frontend/.env"
             echo API_URL=$API_URL >> "frontend/.env"
-            echo $API_URL
       - run:
           name: Build frontend
           command: |
@@ -367,7 +366,7 @@ jobs:
             then
                 return 1
             else
-                return 1
+                return 0
             fi
       - run:
           name: Smoke test
@@ -378,7 +377,7 @@ jobs:
             then
                 return 1
             else
-                return 1
+                return 0
             fi
       - run:
           name: Install AWS CLI for rollback
@@ -437,14 +436,14 @@ workflows:
     jobs:
       - build-frontend
       - build-backend
-#      - test-frontend:
-#          requires: [build-frontend]
-#      - test-backend:
-#          requires: [build-backend]
-#      - scan-frontend:
-#          requires: [build-frontend]
-#      - scan-backend:
-#          requires: [build-backend]
+      - test-frontend:
+          requires: [build-frontend]
+      - test-backend:
+          requires: [build-backend]
+      - scan-frontend:
+          requires: [build-frontend]
+      - scan-backend:
+          requires: [build-backend]
       - deploy-infrastructure:
           requires: [build-backend, build-frontend]
           filters:
