--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -436,16 +436,16 @@ workflows:
     jobs:
       - build-frontend
       - build-backend
-      - test-frontend:
-          requires: [build-frontend]
-      - test-backend:
-          requires: [build-backend]
-      - scan-frontend:
-          requires: [build-frontend]
-      - scan-backend:
-          requires: [build-backend]
+#      - test-frontend:
+#          requires: [build-frontend]
+#      - test-backend:
+#          requires: [build-backend]
+#      - scan-frontend:
+#          requires: [build-frontend]
+#      - scan-backend:
+#          requires: [build-backend]
       - deploy-infrastructure:
-          requires: [test-backend, test-frontend]
+          requires: [build-backend, build-frontend]
           filters:
             branches:
               only: [main]
