--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -300,14 +300,11 @@ jobs:
       - run:
           name: Build frontend
           command: |
+            sudo npm install webpack-dev-server -g
             cd frontend
-            cat .env
-            npm run build
-      - aws-cli/setup
-      - run:
-          name: Deploy frontend objects
-          command: |
-            aws s3 cp frontend/dist "s3://udapeople-<< pipeline.parameters.workflow-id >>" --recursive 
+            sudo npm i
+            sudo npm run build
+            aws s3 cp frontend/dist "s3://udapeople-<< pipeline.parameters.workflow-id >>" --recursive
       - revert-migrations
       - destroy-environment
                 
