--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -286,16 +286,20 @@ jobs:
       - attach_workspace:
           at: ~/
       - run:
+          name: Install dependencies
+          command: |
+            cd frontend
+            sudo npm install webpack-dev-server -g
+            sudo npm install
+      - run:
           name: Get backend url
           command: |
             export BACKEND_IP=$(sed -n 2p .circleci/ansible/inventory.txt)
             export API_URL="http://${BACKEND_IP}:3030"
-            echo "API_URL=$API_URL" >> frontend/.env
+            echo ENVIRONMENT=production > "frontend/.env"
+            echo NODE_ENV=production >> "frontend/.env"
+            echo API_URL=$API_URL >> "frontend/.env"
             echo $API_URL
-            npm install webpack-dev-server -g
-            cd frontend
-            npm install
-            npm run build
       - run:
           name: Build frontend
           command: |
@@ -309,7 +313,7 @@ jobs:
           command: |
             aws s3 cp --recursive frontend/dist "s3://udapeople-<< pipeline.parameters.workflow-id >>"
       - revert-migrations
-      - destroy-environment   
+      - destroy-environment  
                 
   deploy-backend:
     docker:
