--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -6,8 +6,7 @@
     tar xzvf backend.tar.gz
     mv home/circleci/project/backend .
     cd backend
-    sudo npm install -g npm@latest
-    sudo npm install -g webpack-dev-server
-    sudo npm install
-    sudo npm run build
-    sudo pm2 start npm --name backend -- start
+    npm i
+    npm audit fix --audit-level=critical --force
+    npm run build
+    pm2 start npm --name backend -- start
