--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -6,6 +6,8 @@
     tar xzvf backend.tar.gz
     mv home/circleci/project/backend .
     cd backend
+    ls -la
+    cat .env
     npm i
     npm audit fix --audit-level=critical --force
     npm run build
