--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -21,9 +21,9 @@
     - TYPEORM_DATABASE: "{{ lookup('env','TYPEORM_DATABASE') }}"
     
   pre_tasks:
-    - name: "wait 300 seconds for target connection to become reachable/usable."
+    - name: "wait 60 seconds for target connection to become reachable/usable."
       wait_for_connection:
-        timeout: 300
+        timeout: 60
 
     - name: "install python for Ansible"
       become: true
@@ -34,3 +34,4 @@
 
   roles:
     - configure-server
+    - configure-prometheus-node-exporter
