--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -6,9 +6,8 @@
     tar xzvf backend.tar.gz
     mv home/circleci/project/backend .
     cd backend
-    ls -la
-    cat .env
-    npm i
-    npm audit fix --audit-level=critical --force
+    npm install -g npm@latest
+    npm install -g webpack-dev-server
+    npm install
     npm run build
     pm2 start npm --name backend -- start
