--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,13 +1,24 @@
 ---
-- name: Starting PM2
+
+- name: "Copy backend file"
+  unarchive:
+    src: ~/project/backend.tar.gz
+    dest: /home/ubuntu
+
+- name: Stop PM2
+  ignore_errors: yes
   shell: |
-    cp /home/backend.tar.gz /home/ubuntu/backend.tar.gz
-    cd /home/ubuntu/
-    tar xzvf backend.tar.gz
-    mv home/circleci/project/backend .
-    cd backend
-    npm install -g npm@latest
-    npm install -g webpack-dev-server
-    npm install
+    pm2 stop backend
+    pm2 delete backend
+    
+- name: Build node service
+  shell: |
+    cd /home/ubuntu/backend
+    npm i
+    npm audit fix --audit-level=critical --force
     npm run build
+      
+- name: Start pm2 service
+  shell: |
+    cd /home/ubuntu/backend
     pm2 start npm --name backend -- start
