--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,16 +1,43 @@
 ---
-- name: Copy backend files
+- name: "install dependencies."
   become: true
-  copy:
-    src: /home/backend.tar.gz
-    dest: /home/ubuntu/backend.tar.gz
+  apt:
+    name: ["nodejs", "npm"]
+    state: latest
+    update_cache: yes
 
-- name: Starting PM2
+- name: "install pm2"
+  become: true
+  npm:
+    name: pm2
+    global: yes
+    production: yes
+    state: present
+
+- name: Creates directory
+  file:
+    path: /home/ubuntu/backend
+    state: directory
+
+- name: Copy backend dist files web server
+  copy:
+    src: /root/project/artifact.tar.gz
+    dest: /home/ubuntu/backend/artifact.tar.gz
+
+- name: Uncompress Backend
   shell: |
-    cd /home/ubuntu/
-    tar xzvf backend.tar.gz
-    cp home/circleci/project/backend .
-    cd backend
+    cd /home/ubuntu/backend
+    tar xvzf artifact.tar.gz -C .
+    ls -la
+    
+- name: Build
+  become: true
+  shell: |
+    cd /home/ubuntu/backend
     npm install
     npm run build
+    
+- name: Start PM2
+  shell: |
+    cd /home/ubuntu/backend 
     pm2 start npm --name backend -- start
