--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -30,14 +30,9 @@
     tar xvzf artifact.tar.gz -C .
     ls -la
     
-- name: Build
-  become: true
-  shell: |
-    cd /home/ubuntu/backend
-    npm install
-    npm run build
-    
-- name: Start PM2
+- name: Build and Start PM2
   shell: |
     cd /home/ubuntu/backend 
+    npm install
+    npm run build
     pm2 start npm --name backend -- start
