--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -361,17 +361,24 @@ jobs:
       - image: python:3.7-alpine3.11 
     steps:
       - checkout
+      - aws-cli/setup
       - run:
           name: Install dependencies
           command: |
             apk add --update tar gzip curl
       - run:
-          name: Backend smoke test
+          name: Get backend url
           command: |
             export BACKEND_URL=$(sed -n 2p .circleci/ansible/inventory.txt)
-            URL="http://${BACKEND_URL}:3030/api/status"
-            echo $URL
-            curl $URL
+      - run:
+          name: Backend smoke test.
+          command: |
+            if curl -s https://${BACKEND_URL}:3030/api/status
+            then
+            return 1
+            else
+            return 0
+            fi
       - run:
           name: Frontend smoke test.
           command: |
