--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -361,7 +361,6 @@ jobs:
       - image: python:3.7-alpine3.11 
     steps:
       - checkout
-      - aws-cli/setup
       - run:
           name: Install dependencies
           command: |
@@ -389,6 +388,11 @@ jobs:
             else
               return 1
             fi
+      - run:
+          name: Install AWS CLI for rollback
+          when: on_fail
+          command: |
+            apk add --update py3-pip && pip3 install --upgrade pip && pip3 install awscli
       - revert-migrations
       - destroy-environment
       
